--- a/src/app/routes/dashboard/logs-list/logs-list.component.scss
+++ b/src/app/routes/dashboard/logs-list/logs-list.component.scss
@@ -18,8 +18,6 @@ section {
   height: 500px;
   width: clamp(300px, 90%, 1000px);
   max-width: 900px;
-  display: flex;
-  justify-content: center;
 
   table {
     margin-top: 0;
@@ -36,6 +34,10 @@ section {
     position: sticky;
     top: 0;
     z-index: 1;
+  }
+
+  app-progress-spinner {
+    margin: auto;
   }
 }
 
