--- a/src/app/routes/dashboard/users/user-list/user-list.component.scss
+++ b/src/app/routes/dashboard/users/user-list/user-list.component.scss
@@ -34,8 +34,6 @@
   position: relative;
   resize: vertical;
   margin-top: 1em;
-  display: flex;
-  justify-content: center;
 
   @media only screen and (max-width: 700px) {
     width: 100%;
@@ -51,6 +49,10 @@
     position: sticky;
     top: 0;
     z-index: 1;
+  }
+
+  app-progress-spinner {
+    margin: auto;
   }
 }
 
